# sway-shell

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  bacon.toml  rustc-ice-2025-06-29T16_52_48-31113.txt
.github/workflows/: rust.yml
src/: audio.rs  backlight.rs  battery.rs  clock.rs  files.rs  font.rs  layer.rs  main.rs  mpd.rs  netlink.rs  network.rs  renderer.rs  shader.wgsl  shaper.rs  state.rs  sway.rs  viewable.rs
src/netlink/: ethtool.rs  nl80211.rs  routel.rs
