[package]
name = "sway-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = "0.3.31"
log = "0.4.27"
mpd = "0.1.0"
neli = "0.7.0"
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.19.2"
swayipc = "3.0.3"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread"] }
wayland-backend = { version = "0.3.10", features = ["raw-window-handle", "client_system"] }
wayland-client = "0.31.10"
wgpu = "25.0.2"
