[package]
name = "sway-shell"
version = "0.1.0"
edition = "2024"

[dependencies]
ab_glyph = "0.2.30"
rustybuzz = "0.20.1"
bitflags = "2.9.4"
bytemuck = { version = "1.23.1", features = ["bytemuck_derive"] }
chrono = "0.4.42"
derive_builder = "0.20.2"
itertools = "0.14.0"
libspa = { version = "0.9.2", features = ["v0_3_75"] }
log = "0.4.27"
macaddr = "1.0.1"
mio = { version = "1.1.1", features = ["os-poll"] }
mpd = "0.1.0"
neli = { git = "https://github.com/eternalfrustation/neli", version = "0.7.1", features = ["async"] }
pipewire = { version = "0.9.2", features = ["v0_3_77"] }
pretty_env_logger = "0.5.0"
raw-window-handle = "0.6.2"
smithay-client-toolkit = "0.19.2"
svg = "0.18.0"
swayipc = "3.0.3"
tinyjson = "2.5.1"
tokio = { version = "1.46.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"
udev = { version = "0.9.3", features = ["mio", "hwdb", "send", "sync"] }
wayland-backend = { version = "0.3.10", features = ["raw-window-handle", "client_system"] }
wayland-client = "0.31.10"
wgpu = { version = "25.0.2", default-features = false, features = ["vulkan", "wgsl", "gles"] }
